@@ -15,6 +15,7 @@ BUG: Ticket#787 - Typo in validation3.js (Christophe)
 BUG: Ticket#766, #786 - TDbCache does not work with MySQL and PostgreSQL (Qiang)
 BUG: Ticket#799 - Fixed several link errors in documentation about PDO (Qiang)
 BUG: Ticket#803 - TActiveRecord cannot be serialized/unserialized correctly. (Qiang)
+BUG: Ticket#808 - Client side validation should work for file upload. (Qiang)
 BUG: Fixed a bug in TPropertyValue::ensureArray() (Qiang)
 CHG: Changed TConditional so that the controls in its template behave like they are in its parent (Qiang)
 CHG: Active Record many-to-many relationship change from self::HAS_MANY to self::MANY_TO_MANY (Wei)
